--- a/src/app/houses-list/house-dialog.html
+++ b/src/app/houses-list/house-dialog.html
@@ -3,6 +3,6 @@
   Bạn chắc chắn muốn xóa "{{title}}"?
 </div>
 <div mat-dialog-actions>
-  <button (click)="closedialog()" mat-button mat-dialog-close>No</button>
-  <button (click)="accept()" mat-button mat-dialog-close cdkFocusInitial color="warn">Ok</button>
+  <button (click)="closedialog()" mat-button mat-dialog-close color="primary">Hủy</button>
+  <button (click)="accept()" mat-button mat-dialog-close cdkFocusInitial color="warn">Xóa</button>
 </div>
