--- a/src/app/popup-house/popup-house.component.html
+++ b/src/app/popup-house/popup-house.component.html
@@ -37,9 +37,9 @@
         <mat-error *ngIf="formControls.nbroom.errors?.['required'] && formControls.nbroom.touched">Field is required</mat-error>
        </mat-form-field>
        <mat-form-field>
-        <mat-label>Url hình ảnh</mat-label>
-        <input matInput formControlName="url" required>
-        <mat-error *ngIf="formControls.url.errors?.['required'] && formControls.url.touched">Field is required</mat-error>
+        <mat-label>Hình ảnh</mat-label>
+        <input matInput formControlName="image" required>
+        <mat-error *ngIf="formControls.image.errors?.['required'] && formControls.image.touched">Field is required</mat-error>
        </mat-form-field>
       <mat-form-field>
         <mat-label>Tọa độ</mat-label>
