--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -5,11 +5,12 @@
     <p>Email: nang123@gmail.com</p>
     <p>Hoặc gửi trực tiếp yêu cầu thông qua biểu mẫu bên dưới:</p>
     <h1>Liên hệ admin</h1>
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()"></form>
-    <div mat-dialog-content>
+    <form ></form>
+    <div mat-dialog-content [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+      
         <mat-form-field>
          <mat-label >Họ tên</mat-label>
-         <input formControlName="name" matInput required>
+         <input formControlName="fullname" matInput required>
         </mat-form-field>
         <mat-form-field>
          <mat-label>Địa chỉ email</mat-label>
@@ -17,7 +18,7 @@
         </mat-form-field>
         <mat-form-field>
          <mat-label>Nội dung liên hệ</mat-label>
-         <input matInput formControlName="message" required>
+         <input matInput formControlName="des" required>
         </mat-form-field>
         
      
@@ -38,6 +39,6 @@
     </form> -->
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button type="submit" color="primary">Gửi</button>
+  <button mat-raised-button type="submit" color="primary" (click)="onSubmit()">Gửi</button>
 </div>
   
