--- a/src/app/component/menubar/menubar.component.html
+++ b/src/app/component/menubar/menubar.component.html
@@ -16,10 +16,10 @@
       <mat-list-item>
         <button routerLink="comments" mat-button><mat-icon>person</mat-icon>Bình luận</button>
       </mat-list-item>
-      <mat-list-item>
+       <!-- <mat-list-item>
         <button routerLink="map" mat-button>
           <mat-icon>location_on</mat-icon> Bản đồ</button>
-      </mat-list-item>
+      </mat-list-item> -->
       <mat-list-item>
         <button routerLink="file-manager" mat-button>
           <mat-icon>folder</mat-icon> file</button>
